# Vulkan-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.h  asset_manager.cpp  asset_manager.h  compile.sh  glfw_window.cpp  glfw_window.h  main.cpp  test.cpp  window_swapchain.cpp
asset_manager/: asset_manager.cpp  gltf_importer.cpp  gltf_importer.h  obj_loader.h
core/: CMakeLists.txt  component.cpp  component.h  configuration.cpp  configuration.h  core_asset_manager.h  entity.cpp  entity.h  event_queue.cpp  event_queue.h  events.h  input.cpp  input.h  input_keycode.h  scene.cpp  scene.h  scene_context.h  scene_contexts.h  timestep.h
core/test/: CMakeLists.txt  basic_test.cpp
editor/: CMakeLists.txt  component_list.h  editor.cpp  editor.h  entity_properties.cpp  entity_properties.h  filesystem_viewer.h  main.cpp  material_editor.cpp  material_editor.h  scene_graph.cpp  scene_graph.h  texture_editor.cpp  texture_editor.h  viewport.cpp  viewport.h  workspace.cpp  workspace.h
glfw_platform/: glfw_window.cpp  glfw_window.h  window_swapchain.h
model_loaders/: gltf_importer.cpp  obj_loader.cpp
physics/: CMakeLists.txt  collision_shape.cpp  collision_shape.h  dynamic_rigidbody.cpp  dynamic_rigidbody.h  physics_actor.cpp  physics_actor.h  physics_context.cpp  physics_context.h  physics_system.cpp  physics_system.h  rigidbody.cpp  rigidbody.h  static_rigidbody.cpp  static_rigidbody.h
physics/components/: dynamic_body_component.cpp  dynamic_body_component.h  physics_components_common.h  static_body_component.cpp  static_body_component.h
physics/test_launch/: main.cpp
platform/: glfw_swapchain.cpp  glfw_swapchain.h  glfw_window.cpp  glfw_window.h  openxr_platform.cpp  openxr_platform.h  openxr_swapchain.cpp  openxr_swapchain.h  window_swapchain.cpp  window_swapchain.h
renderer/: CMakeLists.txt  Imgui_plugin.h  camera.h  imgui_plugin.cpp  light.h  material.h  mesh.h  node.h  pipeline_imgui.cpp  pipeline_imgui.h  pipeline_inputs.h  pipeline_line.cpp  pipeline_line.h  render_technique.cpp  render_technique.h  renderer.cpp  renderer.h  scene.h  texture.h  ui.h  vulkan_camera.cpp  vulkan_camera.h  vulkan_context.cpp  vulkan_context.h  vulkan_light.cpp  vulkan_light.h  vulkan_material.cpp  vulkan_material.h  vulkan_mesh.cpp  vulkan_mesh.h  vulkan_node.cpp  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_ui.cpp  vulkan_ui.h  vulkan_utilities.h  vulkan_wireframe.cpp  (+2 more)
renderer/components/: camera_component.cpp  camera_component.h  light_component.cpp  light_component.h  mesh_component.cpp  mesh_component.h  openxr_components.cpp  openxr_components.h  ui_component.cpp  ui_component.h  wireframe_component.cpp  wireframe_component.h
renderer/interface/: camera.h  light.h  material.h  mesh.h  node.h  renderer.h  renderer_asset_manager.h  renderer_assets.h  texture.h  ui.h  wireframe.h
renderer/loaders/: gltfloader.cpp
renderer/vk_primitives/: vulkan_buffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_pipeline.h  vulkan_pipeline_layout.h  vulkan_uniform.cpp  vulkan_vertexbuffer.cpp
resources/javascript/: enums.js  math.js  physics,js  physics.js  vr_controller.js
resources/vulkan_shaders/Phong/: shader.frag  shader.vert
resources/vulkan_shaders/line/: shader.frag  shader.vert
resources/vulkan_shaders/quad/: shader.vert
resources/vulkan_shaders/skybox/: shader.frag  shader.vert
resources/vulkan_shaders/transfer/: shader.vert
resources/vulkan_shaders/wire/: shader.vert
samples/: CMakeLists.txt  scene.cpp  scene1.cpp  scene2.cpp  scene3.cpp  test.cpp
scripting/: CMakeLists.txt  environment.h  environment_templates.cpp  environment_templates.h  script.cpp  script.h  script_asset_manager.h  script_component.cpp  script_component.h  script_context.cpp  script_context.h  script_exception.h  scripting_subsystem.cpp  scripting_subsystem.h
scripting/depracated/: component_templates.cpp  component_templates.h  environment.cpp
scripting/environment/: asset_manager_callbacks.cpp  asset_manager_callbacks.h  component_callbacks.cpp  component_callbacks.h  entity_callbacks.cpp  entity_callbacks.h  environment.cpp  environment.h  input_callbacks.cpp  input_callbacks.h  physics_callbacks.cpp  physics_callbacks.h  scene_callbacks.cpp  scene_callbacks.h  script_math.cpp  script_math.h
scripting/environment/physics/: collision_shapes.cpp  collision_shapes.h
scripting/tests/: CMakeLists.txt  test_script_compile.cpp
test/: CMakeLists.txt  test_asset_manager1.cpp
utility/: CMakeLists.txt  base64.h  filesystem.cpp  filesystem.h  input.cpp  input.h  logger.cpp  logger.h  math_library.cpp  math_library.h  serialization.cpp  serialization.h  validation.h
vulkan_renderer/: CMakeLists.txt  imgui_plugin.cpp  pipeline_imgui.cpp  pipeline_imgui.h  pipeline_inputs.h  render_technique.cpp  render_technique.h  vulkan_camera.cpp  vulkan_camera.h  vulkan_cmdbuffer.cpp  vulkan_cmdbuffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_light.cpp  vulkan_light.h  vulkan_material.cpp  vulkan_material.h  vulkan_mesh.cpp  vulkan_mesh.h  vulkan_node.cpp  vulkan_node.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_scene.cpp  vulkan_scene.h  vulkan_shader.h  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_ui.cpp  vulkan_ui.h  vulkan_uniform.cpp  vulkan_uniform.h  vulkan_vertexbuffer.cpp  vulkan_vertexbuffer.h  vulkan_wireframe.cpp  vulkan_wireframe.h
vulkan_renderer/loaders/: gltfloader.cpp  gltfloader.h  objloader.cpp  objloader.h
vulkan_renderer/vk_primitives/: vulkan_cmdbuffer.cpp  vulkan_cmdbuffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_pipeline_layout.cpp  vulkan_pipeline_layout.h  vulkan_shader.h  vulkan_uniform.cpp  vulkan_uniform.h  vulkan_vertexbuffer.cpp  vulkan_vertexbuffer.h
